@@ -1,0 +1,6 @@
+<?php
+
+class Test {
+    const X = UNDEF;
+    const Y = Foo::UNDEF;
+}
