@@ -1,18 +1,17 @@
 --TEST--
-Preloading class using trait with undefined class constant access
+Preloading: Loadable class checking (2)
 --INI--
 opcache.enable=1
 opcache.enable_cli=1
 opcache.optimization_level=-1
-opcache.preload={PWD}/preload_undef_const_2.inc
+opcache.preload={PWD}/preload_loadable_classes_2.inc
 --SKIPIF--
 <?php require_once('skipif.inc'); ?>
 --FILE--
-<?php
-var_dump(trait_exists('T'));
-var_dump(class_exists('Foo'));
-?>
+Unreachable
 --EXPECTF--
 Warning: Use of undefined constant UNDEF - assumed 'UNDEF' (this will throw an Error in a future version of PHP) in Unknown on line 0
-bool(true)
-bool(true)
+
+Fatal error: Class 'Foo' not found in Unknown on line 0
+
+Fatal error: Error generated while resolving initializers of class Test during preloading in Unknown on line 0
